[package]
name = "btree-storage"
version = "0.1.0"
edition = "2021"
description = "A high-performance B-tree storage engine for relational databases"
license = "MIT"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"

[features]
default = []
