[package]
name = "btree-storage"
version = "0.1.0"
edition = "2021"
description = "A high-performance B-tree storage engine for relational databases"
license = "MIT"

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"

[features]
default = []
server = ["axum", "tokio", "tower-http"]

[[bin]]
name = "btree_server"
path = "src/bin/btree_server.rs"
required-features = ["server"]
